--- a/contact.html
+++ b/contact.html
@@ -31,13 +31,13 @@
           <label class="altlabel" for="fstore">Which is your favourite store in town?</label>
           <br>
           <div class="favstore">
-          <input type="radio" id="fstore-vancouver" name="fstore" value="vancouver">
+          <input type="radio" id="vancouver" name="fstore" value="vancouver">
           <label for="vancouver">Vancouver</label>
           <br>
-          <input type="radio" id="fstore-surrey" name="fstore" value="surrey">
+          <input type="radio" id="surrey" name="fstore" value="surrey">
           <label for="surrey">Surrey</label>
           <br>
-          <input type="radio" id="fstore-richmond" name="fstore" value="richmond">
+          <input type="radio" id="richmond" name="fstore" value="richmond">
           <label for="richmond">Richmond</label>
           </div>
           <br>
