--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
           <label class="altlabel" for="lname">Last Name:</label>
           <input type="text" id="lname" name="lname" placeholder="Your last name">
           <br>
-          <label class="altlabel" for="fstore">Which is your favourite store in town?</label>
+          <label class="altlabel">Which is your favourite store in town?</label>
           <br>
           <div class="favstore">
           <input type="radio" id="vancouver" name="fstore" value="vancouver">
